@@ -1,3 +1,10 @@
+2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Remove ‘forceciflag’, ‘keepworkingfile’ from global state of ci(1).
+
+	* ci.c (forceciflag, keepworkingfile): Delete var.
+	(main): Add auto var ‘forceciflag’, ‘keepworkingfile’.
+
 2011-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Remove ‘workptr’, ‘workstat’ from global state of ci(1).
